working thruk with template configuration for nagios

--- a/apache_fcgid.conf
+++ b/apache_fcgid.conf
@@ -1,99 +1,80 @@
-<IfModule mod_fcgid.c>
-  AddHandler fcgid-script .sh
-  IPCCommTimeout 120
 
-  # uncomment these lines to increase the default timeout
-  #FcgidCmdOptions /usr/share/thruk/fcgid_env.sh \
-  #  IOTimeout 120
+## Vhost docroot
+DocumentRoot "/var/www"
+## Alias declarations for resources outside the DocumentRoot
+Alias /thruk/documentation.html "/usr/share/thruk/root/thruk/documentation.html"
+Alias /thruk/startup.html "/usr/share/thruk/root/thruk/startup.html"
+Alias /thruk/themes/ "/etc/thruk/themes/themes-enabled/"
+AliasMatch ^/thruk/(.*\.cgi|.*\.html) "/usr/share/thruk/fcgid_env.sh/thruk/$1"
+AliasMatch ^/thruk/plugins/(.*?)/(.*)$ "/etc/thruk/plugins/plugins-enabled/$1/root/$2"
+Alias /thruk "/usr/share/thruk/root/thruk"
+Alias /nagios/images/logos "/var/www/logos"
 
-  <Directory /usr/share/thruk>
-    Options FollowSymLinks
-    AllowOverride All
-    # apache 2.2
-    <IfModule !mod_authz_core.c>
-      order allow,deny
-      allow from all
-    </IfModule>
-    # apache 2.4
-    <IfModule mod_authz_core.c>
-      Require all granted
-    </IfModule>
-    # apache 2.4 with compat module
-    <IfModule mod_access_compat.c>
-      order allow,deny
-      allow from all
-    </IfModule>
-  </Directory>
-  <Directory /etc/thruk/themes>
-    Options FollowSymLinks
-    # apache 2.2
-    <IfModule !mod_authz_core.c>
-      allow from all
-    </IfModule>
-    # apache 2.4
-    <IfModule mod_authz_core.c>
-      Require all granted
-    </IfModule>
-    # apache 2.4 with compat module
-    <IfModule mod_access_compat.c>
-      order allow,deny
-      allow from all
-    </IfModule>
-  </Directory>
-  <Directory /etc/thruk/plugins>
-    Options FollowSymLinks
-    # apache 2.2
-    <IfModule !mod_authz_core.c>
-      allow from all
-    </IfModule>
-    # apache 2.4
-    <IfModule mod_authz_core.c>
-      Require all granted
-    </IfModule>
-    # apache 2.4 with compat module
-    <IfModule mod_access_compat.c>
-      order allow,deny
-      allow from all
-    </IfModule>
-  </Directory>
+## Directories, there should at least be a declaration for /var/www
 
-  Alias /thruk/documentation.html /usr/share/thruk/root/thruk/documentation.html
-  Alias /thruk/startup.html /usr/share/thruk/root/thruk/startup.html
-  AliasMatch ^/thruk/(.*\.cgi|.*\.html)  /usr/share/thruk/fcgid_env.sh/thruk/$1
-  AliasMatch ^/thruk/plugins/(.*?)/(.*)$  /etc/thruk/plugins/plugins-enabled/$1/root/$2
-  Alias /thruk/themes/  /etc/thruk/themes/themes-enabled/
-  Alias /thruk /usr/share/thruk/root/thruk
+<Directory "/usr/share/thruk">
+  Options FollowSymLinks
+  AllowOverride All
+  # Require all granted
+</Directory>
 
-  <Location /thruk/>
-    Options ExecCGI FollowSymLinks
-    AuthName "Thruk Monitoring"
-    AuthType Basic
-    AuthUserFile /etc/thruk/htpasswd
-    Require valid-user
-  </Location>
-  <Location /thruk/cgi-bin/remote.cgi>
-    # apache 2.2
-    <IfModule !mod_authz_core.c>
-      Order Deny,Allow
-      Allow from all
-      Satisfy any
-    </IfModule>
-    # apache 2.4
-    <IfModule mod_authz_core.c>
-      Require all granted
-    </IfModule>
-    # apache 2.4 with compat module
-    <IfModule mod_access_compat.c>
-      Order Deny,Allow
-      Allow from all
-      Satisfy any
-    </IfModule>
-  </Location>
-</IfModule>
+<Directory "/etc/thruk/themes">
+  Options FollowSymLinks
+  AllowOverride None
+  Require all granted
+</Directory>
 
-# use compressed output if available
-<IfModule mod_deflate.c>
-  <Location /thruk/>
-    AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript
-  </Location>
-</IfModule>
+<Directory "/etc/thruk/plugins">
+  Options FollowSymLinks
+  AllowOverride None
+  Require all granted
+</Directory>
+
+# <Location "/thruk/">
+#   Options ExecCGI FollowSymLinks
+#   AuthName "Thruk Monitoring"
+#   AuthType Basic
+#   AuthUserFile /etc/thruk/htpasswd
+#   Require valid-user
+# </Location>
+#
+# <Location "/thruk/cgi-bin/remote.cgi">
+#   # Options ExecCGI FollowSymLinks
+#   Require all granted
+# </Location>
+
+
+<Location /thruk/>
+   Options ExecCGI FollowSymLinks
+   AuthName "Thruk Monitoring"
+   AuthType Basic
+   AuthUserFile /etc/thruk/htpasswd
+   Require valid-user
+ </Location>
+ <Location /thruk/cgi-bin/remote.cgi>
+   # apache 2.2
+   <IfModule !mod_authz_core.c>
+     Order Deny,Allow
+     Allow from all
+     Satisfy any
+   </IfModule>
+   # apache 2.4
+   <IfModule mod_authz_core.c>
+     Require all granted
+   </IfModule>
+   # apache 2.4 with compat module
+   <IfModule mod_access_compat.c>
+     Order Deny,Allow
+     Allow from all
+     Satisfy any
+   </IfModule>
+ </Location>
+
+
+# <Location "/thruk/cgi-bin/config.cgi">
+#   Options ExecCGI FollowSymLinks
+#   Require all granted
+# </Location>
+
+## RedirectMatch rules
+RedirectMatch permanent  ^/$ /thruk
