--- a/thruk_local.conf
+++ b/thruk_local.conf
@@ -3,10 +3,24 @@ start_page = /thruk/cgi-bin/tac.cgi
 
 <Component Thruk::Backend>
     <peer>
-        name    = nagios3
+        name    = am2-nagios01
         type    = livestatus
         <options>
-            peer          = nagios3:6557
+            peer          = 172.26.112.163:6557
+        </options>
+    </peer>
+    <peer>
+        name    = avl-nagios01
+        type    = livestatus
+        <options>
+            peer          = 172.26.43.22:6557
+        </options>
+    </peer>
+    <peer>
+        name    = sjc-nagios01
+        type    = livestatus
+        <options>
+            peer          = 172.26.112.163:6557
         </options>
     </peer>
 </Component>
