--- a/apache_fcgid.conf
+++ b/apache_fcgid.conf
@@ -1,4 +1,3 @@
-
 ## Vhost docroot
 DocumentRoot "/var/www"
 ## Alias declarations for resources outside the DocumentRoot
@@ -15,7 +14,7 @@ Alias /nagios/images/logos "/var/www/logos"
 <Directory "/usr/share/thruk">
   Options FollowSymLinks
   AllowOverride All
-  # Require all granted
+  Require all granted
 </Directory>
 
 <Directory "/etc/thruk/themes">
@@ -30,51 +29,22 @@ Alias /nagios/images/logos "/var/www/logos"
   Require all granted
 </Directory>
 
-# <Location "/thruk/">
-#   Options ExecCGI FollowSymLinks
-#   AuthName "Thruk Monitoring"
-#   AuthType Basic
-#   AuthUserFile /etc/thruk/htpasswd
-#   Require valid-user
-# </Location>
-#
-# <Location "/thruk/cgi-bin/remote.cgi">
-#   # Options ExecCGI FollowSymLinks
-#   Require all granted
-# </Location>
+<Location "/thruk/">
+  Options ExecCGI FollowSymLinks
+  Require valid-user
+</Location>
 
+<Location "/thruk/cgi-bin/remote.cgi">
+  Require all granted
+</Location>
 
-<Location /thruk/>
-   Options ExecCGI FollowSymLinks
-   AuthName "Thruk Monitoring"
-   AuthType Basic
-   AuthUserFile /etc/thruk/htpasswd
-   Require valid-user
- </Location>
- <Location /thruk/cgi-bin/remote.cgi>
-   # apache 2.2
-   <IfModule !mod_authz_core.c>
-     Order Deny,Allow
-     Allow from all
-     Satisfy any
-   </IfModule>
-   # apache 2.4
-   <IfModule mod_authz_core.c>
-     Require all granted
-   </IfModule>
-   # apache 2.4 with compat module
-   <IfModule mod_access_compat.c>
-     Order Deny,Allow
-     Allow from all
-     Satisfy any
-   </IfModule>
- </Location>
-
-
-# <Location "/thruk/cgi-bin/config.cgi">
-#   Options ExecCGI FollowSymLinks
-#   Require all granted
-# </Location>
 
 ## RedirectMatch rules
 RedirectMatch permanent  ^/$ /thruk
+
+## Custom fragment
+<Location />
+AuthType Basic
+AuthName Restricted
+require valid-user
+</Location>
